# ausecon-mcp-server

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.smithery  LICENSE  README.md  fastmcp.json  glama.json  pyproject.toml  server.json  smithery.yaml
.codex/environments/: environment.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  integration.yml  release.yml
docs/: architecture.md  claude-recommendation-review-2026-05-18.md  code-review-2026-06.md  contributing.md  coverage-audit-2026-04.md  migration-v0.13.0.md  response-schema.md  roadmap.md  smithery-deployment.md  variant_candidates.md  variants.md
docs-site/: astro.config.mjs  package-lock.json  package.json
docs-site/src/content/docs/: index.mdx
docs-site/src/content/docs/client-setup/: index.md
docs-site/src/content/docs/getting-started/: index.md
docs-site/src/content/docs/maintainers/: contributing.md  releasing.md  roadmap.md
docs-site/src/content/docs/operations/: caching-and-logging.md  hosted-deployment.md
docs-site/src/content/docs/reference/: resources-and-prompts.md  response-schema.md  semantic-concepts.md  semantic-variants.md  tools.md
docs-site/src/layouts/: Base.astro  base.astro
docs/superpowers/plans/: 2026-04-12-rba-abs-mcp-server.md  2026-04-19-semantic-layer-expansion-tranche-a.md  2026-04-19-semantic-layer-expansion-tranches-ab.md
docs/superpowers/specs/: 2026-04-19-semantic-layer-expansion-design.md  2026-04-19-v1-roadmap-design.md
examples/: claude_desktop_config.json
examples/payloads/: abs-cpi-response.json  rba-g1-response.json  semantic-cash-rate-target-response.json
integration_tests/: conftest.py  golden.py  golden_values.yaml  test_abs_live.py  test_apra_live.py  test_derived_live.py  test_golden_values.py  test_rba_live.py  test_semantic_live.py
schemas/: response.schema.json
scripts/: audit_apra_governance.py  audit_catalogue.py  benchmark_apra_parser 2.py  benchmark_apra_parser.py  dump_variant_candidates.py  mcp_client_smoke.py  refresh_apra_url_seeds.py  update_docs_reference.py
src/ausecon_mcp/: __init__.py  bounds.py  cache.py  contracts.py  convenience.py  derived.py  errors.py  filters.py  identity.py  logging.py  models.py  periods.py  prompts.py  releases.py  resources.py  server.py  validation.py
src/ausecon_mcp/catalogue/: __init__.py  _runtime.py  abs.py  apra.py  rba.py  resolver.py  search.py
src/ausecon_mcp/data/: apra_url_seeds.json
src/ausecon_mcp/governance/: __init__.py  apra.py
src/ausecon_mcp/parsers/: __init__.py  abs_csv.py  abs_structure.py  apra_xlsx.py  rba_csv.py
src/ausecon_mcp/providers/: __init__.py  _http.py  _retry.py  _single_flight.py  abs.py  apra.py  rba.py
src/ausecon_mcp/schemas/: response.schema.json
tests/: conftest.py  test_abs_provider.py  test_apra_governance.py  test_apra_parser.py  test_apra_parser_benchmark 2.py  test_apra_parser_benchmark.py  test_apra_provider.py  test_apra_seed_refresh.py  test_bounds.py  test_cache.py  test_catalogue.py  test_catalogue_audit.py  test_catalogue_search.py  test_convenience.py  test_derived.py  test_filters.py  test_golden_manifest.py  test_http.py  test_identity.py  test_logging.py  test_parsers.py  test_periods.py  test_prompts.py  test_rba_provider.py  test_releases.py  test_repository_hygiene.py  test_resolver.py  test_resources.py  test_response_schema.py  test_server.py  test_single_flight.py  test_tranche_h_concepts.py  test_validation.py
tests/fixtures/: abs_ana_agg_sample.csv  abs_cpi_sample.csv  abs_cpi_shuffled.csv  abs_cpi_structure.xml  abs_release_calendar_sample.html  rba_a2_sample.csv  rba_g1_sample.csv  rba_release_schedule_sample.html
(+4 files in other folders)
