[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "ausecon-mcp-server"
version = "0.3.1"
description = "MCP server for Australian economic data from the ABS and RBA."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Anthony P" },
]
dependencies = [
  "fastmcp>=2.5.1",
  "httpx>=0.27,<1",
]

[project.urls]
Homepage = "https://github.com/AnthonyPuggs/ausecon-mcp-server"
Repository = "https://github.com/AnthonyPuggs/ausecon-mcp-server"
Issues = "https://github.com/AnthonyPuggs/ausecon-mcp-server/issues"

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<10",
  "pytest-asyncio>=0.24,<2",
  "respx>=0.22,<1",
  "ruff>=0.9,<1",
  "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
ausecon-mcp-server = "ausecon_mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.hatch.build.targets.wheel]
packages = ["src/ausecon_mcp"]
