[build-system]
requires = ["hatchling>=1.24", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "ausecon-mcp-server"
dynamic = ["version"]
description = "MCP server for Australian economic data from the ABS and RBA."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Anthony P" },
]
dependencies = [
  "fastmcp>=2.5.1",
  "httpx>=0.27,<1",
  "platformdirs>=4.0,<5",
  "pydantic>=2,<3",
]

[project.urls]
Homepage = "https://github.com/AnthonyPuggs/ausecon-mcp-server"
Repository = "https://github.com/AnthonyPuggs/ausecon-mcp-server"
Issues = "https://github.com/AnthonyPuggs/ausecon-mcp-server/issues"

[project.optional-dependencies]
dev = [
  "jsonschema>=4.26,<5",
  "pytest>=9.0.3,<10",
  "pytest-asyncio>=0.24,<2",
  "respx>=0.22,<1",
  "ruff>=0.9,<1",
  "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
ausecon-mcp-server = "ausecon_mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/ausecon_mcp/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ausecon_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"schemas/response.schema.json" = "schemas/response.schema.json"
